sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:21: error: type mismatch;
 found   : Unit
 required: Int
			fin = debut = 0 ; 
                                    ^